# openshift-openapi

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
openshift-openapi-codegen/: Cargo.toml
openshift-openapi-codegen/src/: logger.rs  main.rs  supported_version.rs
openshift-openapi-codegen/src/fixups/: mod.rs  openshift.rs  special.rs
src/: lib.rs
src/v4_2/api/apps/v1/: lifecycle_hook.rs
src/v4_2/api/authorization/v1/: cluster_role_binding.rs  local_resource_access_review.rs  local_subject_access_review.rs
src/v4_2/api/image/v1/: image_layer_data.rs  image_stream_import.rs  image_stream_status.rs  signature_issuer.rs
src/v4_2/api/network/v1/: cluster_network_entry.rs  egress_network_policy_peer.rs
src/v4_2/api/oauth/v1/: o_auth_client_authorization.rs
src/v4_2/api/quota/v1/: cluster_resource_quota_spec.rs
src/v4_2/api/security/v1/: pod_security_policy_review.rs  pod_security_policy_review_spec.rs
src/v4_2/api/template/v1/: broker_template_instance_spec.rs
src/v4_3/api/apps/v1/: deployment_cause.rs  deployment_cause_image_trigger.rs  deployment_config.rs
src/v4_3/api/authorization/v1/: cluster_role.rs  group_restriction.rs  role.rs  role_binding.rs  role_binding_restriction.rs  subject_rules_review_spec.rs  user_restriction.rs
src/v4_3/api/image/v1/: image_blob_references.rs  image_signature.rs  image_stream.rs  image_stream_image.rs  image_stream_import.rs  image_stream_mapping.rs  mod.rs  repository_import_status.rs  tag_reference_policy.rs
src/v4_3/api/network/v1/: cluster_network.rs  egress_network_policy_spec.rs  mod.rs  net_namespace.rs
src/v4_3/api/oauth/v1/: o_auth_authorize_token.rs
src/v4_3/api/project/v1/: project.rs  project_request.rs  project_status.rs
src/v4_3/api/quota/v1/: applied_cluster_resource_quota.rs  cluster_resource_quota.rs  mod.rs
src/v4_3/api/route/v1/: route_ingress.rs
src/v4_3/api/security/v1/: pod_security_policy_self_subject_review.rs  pod_security_policy_subject_review_spec.rs
src/v4_3/api/template/v1/: broker_template_instance.rs  template_instance.rs  template_instance_status.rs
src/v4_3/api/user/v1/: group.rs  identity.rs  user.rs  user_identity_mapping.rs
src/v4_4/api/apps/v1/: deployment_condition.rs  deployment_config.rs  deployment_config_rollback.rs  deployment_trigger_image_change_params.rs  tag_image_hook.rs
src/v4_4/api/authorization/v1/: cluster_role.rs  cluster_role_binding.rs  resource_access_review.rs  role.rs  role_binding.rs  role_binding_restriction.rs  self_subject_rules_review.rs  subject_access_review.rs  subject_rules_review_status.rs
src/v4_4/api/image/v1/: image.rs  image_signature.rs  image_stream.rs  image_stream_image.rs  image_stream_import.rs  image_stream_layers.rs  image_stream_mapping.rs  image_stream_tag.rs  named_tag_event_list.rs  signature_condition.rs  signature_subject.rs
src/v4_4/api/network/v1/: cluster_network.rs  egress_network_policy.rs  host_subnet.rs  net_namespace.rs
src/v4_4/api/oauth/v1/: cluster_role_scope_restriction.rs  o_auth_access_token.rs  o_auth_authorize_token.rs  o_auth_client.rs  o_auth_client_authorization.rs  scope_restriction.rs
src/v4_4/api/project/v1/: project.rs  project_request.rs
src/v4_4/api/quota/v1/: applied_cluster_resource_quota.rs  cluster_resource_quota.rs  cluster_resource_quota_selector.rs  resource_quota_status_by_namespace.rs
src/v4_4/api/route/v1/: route.rs
src/v4_4/api/security/v1/: allowed_flex_volume.rs  mod.rs  range_allocation.rs  se_linux_context_strategy_options.rs  security_context_constraints.rs  service_account_pod_security_policy_review_status.rs
src/v4_4/api/template/v1/: broker_template_instance.rs  mod.rs  parameter.rs  template.rs  template_instance.rs  template_instance_object.rs
src/v4_4/api/user/v1/: group.rs  identity.rs  user.rs  user_identity_mapping.rs
src/v4_5/api/: mod.rs
src/v4_5/api/apps/v1/: deployment_config_rollback_spec.rs  deployment_config_status.rs  deployment_trigger_policy.rs  exec_new_pod_hook.rs
src/v4_6/: mod.rs
src/v4_6/api/: mod.rs
(+104 files in other folders)
