[package]
name = "openshift-openapi"
license = "Apache-2.0"
categories = ["api-bindings", "web-programming::http-client"]
description = "Bindings for the OpenShift client API"
version = "0.3.1"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
keywords = ["client", "kubernetes", "k8s", "openshift", "http"]
readme = "README.md"
repository = "https://github.com/ctron/openshift-openapi"

[dependencies]

k8s-openapi = { version = "^0.15" }


base64 = "0.12"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
http = { version = "0.2", optional = true }
percent-encoding = { version = "2", optional = true }
serde = "1"
serde_json = "1"
serde-value = "0.7"
url = { version = "2", optional = true }

[features]

default = ["api"]

api = ["http", "percent-encoding", "url"]

# Each feature corresponds to a supported version of OpenShift and Kubernetes
v4_2 = [ "k8s-openapi/v1_15" ]
v4_3 = [ "k8s-openapi/v1_16" ]
v4_4 = [ "k8s-openapi/v1_17" ]
v4_5 = [ "k8s-openapi/v1_18" ]
v4_6 = [ "k8s-openapi/v1_19" ]

[patch.crates-io]
#k8s-openapi = { git = "https://github.com/Arnavion/k8s-openapi", branch="master" }

[package.metadata.docs.rs]
features = ["v4_6"]
